--- a/resources/assets/stylesheets/scss/studip-cke-ui.scss
+++ b/resources/assets/stylesheets/scss/studip-cke-ui.scss
@@ -1,3 +1,5 @@
+@use '../mixins.scss' as *;
+
 :root {
 
     /* --dark-gray-color-5: #f5f5f6;
@@ -87,17 +89,15 @@
 }
 
 .ck.ck-button.ck-off.ck-button-save {
-    background-image: url('../../../../public/assets/images/icons/blue/accept.svg');
-    background-repeat: no-repeat;
-    background-size: 24px;
+    @include background-icon(accept, clickable, 24);
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 .ck.ck-button.ck-off.ck-button-cancel {
-    background-image: url('../../../../public/assets/images/icons/blue/decline.svg');
-    background-repeat: no-repeat;
-    background-size: 24px;
+    @include background-icon(decline, clickable, 24);
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 .ck.ck-button.ck-off.ck-button_with-text:not(.ck-character-grid__tile):not(.ck-source-editing-button) {
@@ -143,15 +143,15 @@ a.ck.ck-button.ck-button_with-text.ck-dropdown__button:not(.ck-disabled):hover {
 }
 
 .ck.ck-button.ck-off.ck-button-save:hover:not(.ck-disabled) {
-    background-image: url('../../../../public/assets/images/icons/white/accept.svg');
+    @include background-icon(accept, info_alt, 24);
 }
 
 .ck.ck-button.ck-off.ck-button-save.ck-disabled {
-    background-image: url('../../../../public/assets/images/icons/grey/accept.svg');
+    @include background-icon(accept, inactive, 24);
 }
 
 .ck.ck-button.ck-off.ck-button-cancel:hover {
-    background-image: url('../../../../public/assets/images/icons/white/decline.svg');
+    @include background-icon(decline, info_alt, 24);
 }
 
 .ck.ck-button.ck-off.ck-button-save svg,
@@ -319,7 +319,6 @@ a.ck.ck-button.ck-button_with-text.ck-dropdown__button:not(.ck-disabled):hover {
 
 .ck.ck-tooltip .ck-tooltip__text {
     border: 1px solid var(--dark-gray-color-30);
-    -webkit-box-shadow: 0 1px 0 hsla(0,0%,100%,.5) inset;
     box-shadow: inset 0 1px 0 hsla(0,0%,100%,.5);
     font-size: 14px;
     margin-bottom: 8px;
