Resolve "Polishing für die neue responsive Navigation"
Closes #1939, #1948, #1927, #1934, #1935, #1928, #1945, #1954, #1922, #1925, #1932, #1921, #1929, and #1923

Merge request studip/studip!1263

--- a/resources/assets/stylesheets/scss/content_box.scss
+++ b/resources/assets/stylesheets/scss/content_box.scss
@@ -98,7 +98,7 @@ section.contentbox {
             max-height: 0;
             opacity: 0;
             overflow: auto;
-            transition: opacity 0.3s;
+            transition: opacity $transition-duration;
         }
 
 
@@ -218,14 +218,14 @@ section.contentbox {
             max-height: 0;
             opacity: 0;
             overflow: auto;
-            transition: opacity 0.3s;
+            transition: opacity $transition-duration;
         }
 
         &.open {
             > p, > section, > footer, > div {
                 max-height: none;
                 opacity: 1;
-                transition: opacity 0.3s;
+                transition: opacity $transition-duration;
             }
 
             footer {
