--- a/resources/assets/stylesheets/scss/skiplinks.scss
+++ b/resources/assets/stylesheets/scss/skiplinks.scss
@@ -38,6 +38,6 @@ button.skiplink {
     }
 
     @media not prefers-reduced-motion {
-        transition: color 0.3s;
+        transition: color $transition-duration;
     }
 }
