--- a/resources/assets/stylesheets/scss/header.scss
+++ b/resources/assets/stylesheets/scss/header.scss
@@ -17,10 +17,11 @@
     flex-wrap: nowrap;
     justify-content: flex-start;
 
+    padding: 0 10px;
     transform: translate(0, 0) !important; // We need !important due to the horizontal scroll handler
     position: fixed;
     top: 0;
-    z-index: 10000;
+    z-index: 1000;
 
 }
 
@@ -31,7 +32,7 @@
 }
 
 #site-title {
-    padding: 0 $page-margin;
+    padding: 0 5px;
 }
 
 // Fix header covering relevant other areas
