--- a/resources/assets/stylesheets/scss/raumzeit.scss
+++ b/resources/assets/stylesheets/scss/raumzeit.scss
@@ -31,21 +31,21 @@ div.at_least_one_teacher {
                 max-height: 0;
                 opacity: 0;
                 padding: 0;
-                transition: opacity 0.3s;
+                transition: opacity $transition-duration;
             }
 
             &:not(.open) header ~ * {
                 max-height: 0;
                 opacity: 0;
                 overflow: auto;
-                transition: opacity 0.3s;
+                transition: opacity $transition-duration;
             }
 
             &.open {
                 > p, > section, > footer, > div {
                     max-height: none;
                     opacity: 1;
-                    transition: opacity 0.3s;
+                    transition: opacity $transition-duration;
                 }
 
                 footer {
