--- a/resources/assets/stylesheets/scss/tabs.scss
+++ b/resources/assets/stylesheets/scss/tabs.scss
@@ -57,7 +57,7 @@ div.clear
         float: left;
         display: block;
 
-        padding: 3px 8px 3px;
+        padding: 5px 8px;
         white-space: nowrap;
         height: 23px;
     }
