--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -1301,6 +1301,7 @@ label[for="cw-keypoint-color"] {
     .cw-structural-element-list {
         width: 100%;
         padding: 0;
+        margin-top: 8px;
         list-style: none;
     }
 }
