allow redefining the variables in the studip.scss mixin when including it via @use, fixes #2010
Closes #2010

Merge request studip/studip!1310

--- a/resources/assets/stylesheets/mixins.scss
+++ b/resources/assets/stylesheets/mixins.scss
@@ -1,5 +1,5 @@
-$image-path: "../images";
-$icon-path: "#{$image-path}/icons";
+$image-path: "../images" !default;
+$icon-path: "#{$image-path}/icons" !default;
 
 @import "mixins/misc";
 @import "mixins/colors";
