--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -4,11 +4,13 @@
     display: inline-block;
     margin-top: 15px;
     padding: 0 5px 7px 15px;
+    position: sticky;
     text-align: left;
+    top: 50px;
     z-index: 2;
 
     .sidebar-image {
-        width: $sidebar-width;
+        width: calc($sidebar-width - 2px);
         height: 60px;
         max-height: 60px;
 
@@ -66,7 +68,7 @@
         background: $white;
         border: 1px solid $content-color-40;
         margin: 15px 0 0;
-        width: $sidebar-width - 2px;
+        width: $sidebar-width - 5px;
     }
     .sidebar-widget-header {
         @include clearfix();
