--- a/resources/assets/stylesheets/scss/index.scss
+++ b/resources/assets/stylesheets/scss/index.scss
@@ -1,3 +1,7 @@
+body {
+    min-height: 100%;
+}
+
 #main-header {
     grid-column: 1 / 3;
     grid-row: 1 / 1;
@@ -117,6 +121,11 @@
 
 #index,
 #login {
+
+    #current-page-structure {
+        display: none;
+    }
+
     .messagebox {
         margin: 50px 0 -25px 50px;
         width: 418px;
